--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="T:\Codes\Three\style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -24,9 +25,16 @@
                 <li><a>About</a></li>
             </ul>
         </nav>
+        <nav class="rightbar">
+            <ul>
+                <li><a href="">Search</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+        <div class="bar"><i class="fa-solid fa-bars"></i></div>
     </header>
     <div>
-        <img src="T:\Codes\Three\assets\Screenshot 2024-07-02 224711.png" alt="" style="width:100%;">
+        <img src="T:\Codes\Three\assets\Fashion.png" alt="" style="width:100%;">
     </div>
 
 </body>
