--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" href="T:\Codes\Three\assets\PicsArt_08-29-09.22.08.png">
     <link rel="stylesheet" href="T:\Codes\Three\style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +32,7 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
-        <div class="bar"><i class="fa-solid fa-bars"></i></div>
+        <div class="bar"><a href=""><i class="fa-solid fa-bars"></i></a></div>
     </header>
     <div>
         <img src="T:\Codes\Three\assets\Fashion.png" alt="" style="width:100%;">
